gate-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: deck
  namespace: spinnaker
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #nginx.ingress.kubernetes.io/app-root: /
spec:
  rules:
  - http:
      paths:
      - path: /gate
        backend:
          serviceName: spin-gate
          servicePort: 8084
